Documentation edits made through Mintlify web editor

--- a/automation/group-customers.mdx
+++ b/automation/group-customers.mdx
@@ -10,13 +10,20 @@ Truy cập **Automation → Nhóm khách hàng → Thêm nhóm**\
 → Nhập các thông tin trong biểu mẫu\
 → Chọn **Tạo** để hoàn tất thêm nhóm khách hàng.
 
-<Frame caption="Thêm nhóm khách hàng">
+<Frame caption="Tìm kiếm chiến dịch">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image719_3f4ae87a53.png"
-    alt="Giao diện thêm nhóm khách hàng"
-    style={{ borderRadius:"0.5rem" }}
+    alt="Giao diện tìm kiếm chiến dịch"
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
+
 
 ---
 
