--- a/sale-management/product-management/brands-management.mdx
+++ b/sale-management/product-management/brands-management.mdx
@@ -10,7 +10,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Thương hiệu.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image647_bd6d53866f.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -24,7 +30,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Thương hiệu.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image648_a2b95e17f6.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -35,7 +47,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Thương hiệu.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image649_624dd97446.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -48,7 +66,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Thương hiệu.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image650_22e135d9c5.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -58,7 +82,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Thương hiệu.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image651_b14cf78857.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
