--- a/sale-management/product-management/categories-management.mdx
+++ b/sale-management/product-management/categories-management.mdx
@@ -10,7 +10,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Danh mục
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image641_f6a3f8a45b.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -24,7 +30,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Danh mục
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image642_ba4c9da52d.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -34,7 +46,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Danh mục
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image643_cbef335742.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -44,7 +62,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Danh mục
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image644_dabfe51c5c.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -55,7 +79,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Danh mục
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image645_be4cc54dc6.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -65,7 +95,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Danh mục
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image646_05fc3ba4ea.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
