--- a/sale-management/product-management/products-management.mdx
+++ b/sale-management/product-management/products-management.mdx
@@ -9,7 +9,13 @@ Tại phần Quản lý sản phẩm, truy cập tab sản phẩm.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image634_b49dd66984.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -27,7 +33,13 @@ Tại phần Quản lý sản phẩm, truy cập tab sản phẩm.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image635_c0db30e7d3.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -38,7 +50,13 @@ Tại phần Quản lý sản phẩm, truy cập tab sản phẩm.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image636_21e4770ac5.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -49,7 +67,13 @@ Tại phần Quản lý sản phẩm, truy cập tab sản phẩm.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image637_849cc57db7.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -60,7 +84,13 @@ Tại phần Quản lý sản phẩm, truy cập tab sản phẩm.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image638_25c1a6a5a5.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -74,7 +104,13 @@ Tại phần Quản lý sản phẩm, truy cập tab sản phẩm.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image639_297be29dbe.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -86,7 +122,13 @@ Tại phần Quản lý sản phẩm, truy cập tab sản phẩm.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image640_a1f2a0e415.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
