--- a/sale-management/product-management/review-management.mdx
+++ b/sale-management/product-management/review-management.mdx
@@ -10,7 +10,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Đánh giá
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image725_a08383390f.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
