Documentation edits made through Mintlify web editor

--- a/loyalty/member-management.mdx
+++ b/loyalty/member-management.mdx
@@ -10,7 +10,13 @@ Tại phần Loyalty, truy cập Quản lý thành viên
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image666_937ac51abe.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -31,6 +37,12 @@ Tại phần Loyalty, truy cập Quản lý thành viên
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image667_f0e921d843.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
