--- a/loyalty/points-setting.mdx
+++ b/loyalty/points-setting.mdx
@@ -10,7 +10,13 @@ Tại phần Loyalty, truy cập Cài đặt tích điểm
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image670_624b5c983b.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -29,6 +35,12 @@ Tại phần Loyalty, truy cập Cài đặt tích điểm
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image671_86c685d865.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
