--- a/loyalty/ranking-management.mdx
+++ b/loyalty/ranking-management.mdx
@@ -10,7 +10,13 @@ Tại phần Loyalty, truy cập Quản lý hạng thành viên
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image664_6b5a0637b8.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -24,7 +30,13 @@ Tại phần Loyalty, truy cập Quản lý hạng thành viên
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image665_015c91bab8.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
