--- a/users-management/customers-management.mdx
+++ b/users-management/customers-management.mdx
@@ -10,7 +10,13 @@ Tại phần Quản lý người dùng, truy cập tab Khách hàng
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image655_d05e4dfcc4.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -28,7 +34,13 @@ Người dùng có thể tìm kiếm khách hàng theo tên, email, số điện
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image656_ff0ff2f164.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -39,7 +51,13 @@ Người dùng có thể tìm kiếm khách hàng theo tên, email, số điện
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image657_73be1bce44.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -63,7 +81,13 @@ Mỗi khách hàng sau khi được khởi tạo hoặc từ mini app sẽ có c
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image658_182d131bfe.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -73,7 +97,13 @@ Mỗi khách hàng sau khi được khởi tạo hoặc từ mini app sẽ có c
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image659_f13e3b01c4.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
