--- a/users-management/role-management.mdx
+++ b/users-management/role-management.mdx
@@ -10,7 +10,13 @@ Tại phần Cài đặt, truy cập Vai trò & Quyền
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image662_dd8491396a.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -21,7 +27,13 @@ Thêm vai trò bằng cách: Chọn nút “\+ Thêm vai trò” → Biểu mẫ
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image663_bef8095076.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
