--- a/users-management/staff-management.mdx
+++ b/users-management/staff-management.mdx
@@ -10,7 +10,13 @@ Tại phần Quản lý người dùng, truy cập tab Nhân viên
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image660_a51fc37afe.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
@@ -27,7 +33,13 @@ Tại phần Quản lý người dùng, truy cập tab Nhân viên
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image661_9052d56bf4.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
     title=""
   />
 </Frame>
