Documentation edits made through Mintlify web editor

--- a/marketing-tools/flash-sale.mdx
+++ b/marketing-tools/flash-sale.mdx
@@ -10,7 +10,13 @@ Tại phần Marketing, truy cập Flash Sale → chọn tab “Sản phẩm”
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image672_68c5612788.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -23,7 +29,13 @@ Tại phần Marketing, truy cập Flash Sale → chọn tab “Sản phẩm”
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image673_8b1c2dbe7e.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -36,7 +48,13 @@ Tại phần Marketing, truy cập Flash Sale → chọn tab “Sản phẩm”
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image674_a1ae0c506c.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -44,7 +62,13 @@ Tại phần Marketing, truy cập Flash Sale → chọn tab “Sản phẩm”
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image675_f15db1f873.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
