--- a/marketing-tools/mini-game.mdx
+++ b/marketing-tools/mini-game.mdx
@@ -12,7 +12,13 @@ Tại phần Trò chơi, truy cập tab Giải thưởng
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image676_34297987db.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -25,7 +31,13 @@ Tại phần Trò chơi, truy cập tab Giải thưởng
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image677_3c19f294cf.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -39,7 +51,13 @@ Tại phần Trò chơi, truy cập tab Giải thưởng
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image678_bc76977c0f.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -56,7 +74,13 @@ Tại phần Trò chơi, truy cập tab Giải thưởng
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image680_f64d94c898.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -65,7 +89,13 @@ Tại phần Trò chơi, truy cập tab Giải thưởng
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image681_fa99db4fe5.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+      style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -74,7 +104,13 @@ Tại phần Trò chơi, truy cập tab Giải thưởng
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image682_8c9e3811da.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -83,7 +119,13 @@ Tại phần Trò chơi, truy cập tab Giải thưởng
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image683_54351132b5.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -96,7 +138,13 @@ Tại phần Trò chơi, truy cập tab Giải thưởng
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image684_ff1e7c048f.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -107,7 +155,13 @@ Tại phần Trò chơi, truy cập tab Giải thưởng
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image685_414bde9d7c.png"
     alt=""
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
