--- a/settings/company-profile-setting.mdx
+++ b/settings/company-profile-setting.mdx
@@ -13,7 +13,13 @@ Nhấn **“Cập nhật”** để hoàn tất thao tác.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image686_2c56035eb4.png"
     alt="Giao diện cài đặt công ty"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
