--- a/settings/delivery-setting.mdx
+++ b/settings/delivery-setting.mdx
@@ -19,7 +19,13 @@ Chọn đơn vị vận chuyển để kết nối.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image693_9dc90cb4a3.png"
     alt="Danh sách nhà cung cấp vận chuyển"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -64,7 +70,13 @@ Truy cập **POS → Nhà cung cấp vận chuyển → Kết nối GHTK**.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image694_7e8eefce99.png"
     alt="Kết nối GHTK trong POS"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
@@ -75,7 +87,13 @@ Nhập **API Token Key** → Nhấn **“Tiếp theo”** để kết nối.
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image695_98d9880987.png"
     alt="Nhập API Key kết nối GHTK"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -35px" 
+    }}
   />
 </Frame>
 
