Documentation edits made through Mintlify web editor

--- a/automation/group-customers.mdx
+++ b/automation/group-customers.mdx
@@ -10,20 +10,32 @@ Truy cập **Automation → Nhóm khách hàng → Thêm nhóm**\
 → Nhập các thông tin trong biểu mẫu\
 → Chọn **Tạo** để hoàn tất thêm nhóm khách hàng.
 
-<Frame caption="Tìm kiếm chiến dịch">
+<Frame caption="">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image719_3f4ae87a53.png"
-    alt="Giao diện tìm kiếm chiến dịch"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image700_f58180fd9b.png"
+    alt="Thêm nhóm"
     style={{
       borderRadius: "0.5rem",
       width: "100%",
       height: "auto",
       objectFit: "cover",
-      objectPosition: "0 -35px" 
+      objectPosition: "0 -37px" 
     }}
   />
 </Frame>
-
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image701_93501997e7.png"
+    alt=""
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -37px" 
+    }}
+  />
+</Frame>
 
 ---
 
@@ -32,22 +44,34 @@ Truy cập **Automation → Nhóm khách hàng → Thêm nhóm**\
 Truy cập **Automation → Nhóm khách hàng**\
 → Nhấn vào biểu tượng <Icon icon="eye" color="#cfcfcf" size={15} /> để xem chi tiết nhóm khách hàng.
 
-<Frame caption="Xem chi tiết nhóm khách hàng">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image720_fc9fe51fdb.png"
-    alt="Thông tin chi tiết nhóm khách hàng"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
+
 
 <Frame caption="Xem chi tiết nhóm khách hàng">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image721_348c54fb77.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image702_73467aeb7d.png"
     alt="Chi tiết nhóm khách hàng"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -37px" 
+    }}
   />
 </Frame>
-
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image703_a7192bfa64.png"
+    alt=""
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -37px" 
+    }}
+  />
+</Frame>
 ---
 
 #### **Chỉnh sửa nhóm khách hàng**
@@ -57,9 +81,15 @@ Truy cập **Automation → Nhóm khách hàng**\
 
 <Frame caption="Chỉnh sửa nhóm khách hàng">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image722_a2d68f688f.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image704_586b6190dd.png"
     alt="Giao diện chỉnh sửa nhóm khách hàng"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -37px" 
+    }}
   />
 </Frame>
 
@@ -72,9 +102,15 @@ Truy cập **Automation → Nhóm khách hàng**\
 
 <Frame caption="Xóa nhóm khách hàng">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image723_a5ca1a9045.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image705_e2a96e72cd.png"
     alt="Giao diện xác nhận xóa nhóm khách hàng"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -37px" 
+    }}
   />
 </Frame>
 
@@ -87,9 +123,15 @@ Truy cập **Automation → Nhóm khách hàng**\
 
 <Frame caption="Tìm kiếm nhóm khách hàng">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image724_427df7fc3a.png"
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image706_98765b2211.png"
     alt="Giao diện tìm kiếm nhóm khách hàng"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -37px" 
+    }}
   />
 </Frame>
 
