--- a/booking-management/schedule-setting.mdx
+++ b/booking-management/schedule-setting.mdx
@@ -1,6 +1,55 @@
 ---
 title: 'Cài đặt booking'
-description: 'Description of your new file.'
+description: Hướng dẫn thiết lập lịch trong hệ thống.'
 icon: "calendar-pen"
 ---
 
+## **Thiết lập lịch**
+
+Tính năng **Thiết lập lịch** giúp người dùng cài đặt thời gian làm việc, quy tắc hủy lịch và giới hạn số lượng khách trong từng khung giờ.
+
+---
+
+### **Cấu hình thời gian làm việc**
+
+Truy cập **Booking → Thiết lập lịch**\
+→ Bật/tắt các ngày trong tuần mà cửa hàng hoạt động.\
+→ Nhấn vào biểu tượng ✏ để chỉnh sửa khung giờ làm việc của từng ngày.
+
+<Frame caption="Cấu hình thời gian làm việc">
+  <img
+    src=""
+    alt="Giao diện cấu hình thời gian làm việc"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Thiết lập quy tắc hủy và thanh toán**
+
+→ Nhập **Thời gian cho phép hủy** (tính theo giờ) trước khi lịch diễn ra.\
+→ Chọn **Tỷ lệ thanh toán trước (%)** nếu cửa hàng yêu cầu khách thanh toán trước một phần khi đặt lịch.
+
+<Frame caption="Thiết lập quy tắc hủy và thanh toán">
+  <img
+    src=""
+    alt="Màn hình thiết lập quy tắc hủy và thanh toán"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Giới hạn số lượng khách trong khung giờ**
+
+→ Nhập **số lượng tối đa khách hàng** có thể đặt trong một khung giờ.\
+→ Hệ thống sẽ không cho phép thêm lịch vượt quá giới hạn này.
+
+<Frame caption="Giới hạn số lượng khách trong khung giờ">
+  <img
+    src=""
+    alt="Thiết lập giới hạn khách hàng trong khung giờ"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
