--- a/booking-management/service-management.mdx
+++ b/booking-management/service-management.mdx
@@ -1,6 +1,174 @@
 ---
 title: 'Dịch vụ'
-description: 'Description of your new file.'
+description: 'Hướng dẫn quản lý danh mục và dịch vụ trong hệ thống.'
 icon: "receipt"
 ---
+
+## **Danh mục dịch vụ**
+
+Tính năng **Danh mục dịch vụ** giúp người dùng phân loại các nhóm dịch vụ để dễ dàng quản lý, sắp xếp và tìm kiếm.
+
+---
+
+### **Thêm danh mục**
+
+Truy cập **Quản lý dịch vụ → Danh mục dịch vụ → Thêm danh mục**  
+→ Nhập thông tin: **Tên**, **Slug**, chọn **Danh mục cha** (nếu có).  
+→ Tải lên **Logo** và **Banner danh mục** (tối đa 2MB mỗi ảnh).  
+→ Nhấn **Tạo** để hoàn tất thêm danh mục.
+
+<Frame caption="Thêm danh mục dịch vụ">
+  <img
+    src=""
+    alt="Giao diện thêm danh mục dịch vụ"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Chỉnh sửa danh mục**
+
+Truy cập **Quản lý dịch vụ → Danh mục dịch vụ**  
+→ Nhấn vào biểu tượng ✏ để chỉnh sửa danh mục mong muốn.  
+→ Cập nhật các trường cần thiết, sau đó nhấn **Cập nhật** để lưu thay đổi.
+
+<Frame caption="Chỉnh sửa danh mục dịch vụ">
+  <img
+    src=""
+    alt="Màn hình chỉnh sửa danh mục dịch vụ"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Xóa danh mục**
+
+Trong danh sách danh mục dịch vụ, nhấn vào biểu tượng 🗑 để xóa danh mục không còn sử dụng.  
+Hệ thống sẽ hiển thị cảnh báo xác nhận trước khi thực hiện.
+
+<Frame caption="Xóa danh mục dịch vụ">
+  <img
+    src=""
+    alt="Màn hình xác nhận xóa danh mục dịch vụ"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+## **Dịch vụ**
+
+Phần **Dịch vụ** cho phép người dùng thêm mới, chỉnh sửa, quản lý và nhập dữ liệu dịch vụ hàng loạt từ file Excel.  
+Tính năng này giúp tiết kiệm thời gian khi có nhiều dịch vụ cần cập nhật cùng lúc.
+
+---
+
+### **Thêm dịch vụ**
+
+Truy cập **Quản lý dịch vụ → Dịch vụ → Thêm**  
+→ Tải lên **hình ảnh hoặc video minh họa** (tối đa 2MB).  
+→ Nhập thông tin: **Cửa hàng**, **Danh mục**, **Tên**, **Mã hàng hóa**, **Slug**, **Giá bán**, **Thời lượng**, **Đơn vị tính**.  
+→ Nhấn **Tạo** để hoàn tất thêm dịch vụ mới.
+
+<Frame caption="Thêm dịch vụ mới">
+  <img
+    src=""
+    alt="Giao diện thêm dịch vụ mới"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Nhập Excel dịch vụ**
+
+Tính năng **Nhập Excel dịch vụ** cho phép tải dữ liệu hàng loạt từ file mẫu CSV.
+
+→ Chọn **Nhập Excel dịch vụ** → Tải tệp mẫu CSV bằng tùy chọn **Tải xuống tệp csv mẫu**.  
+→ Điền thông tin vào mẫu, sau đó tải lại lên hệ thống.  
+→ Nhấn **Nhập vào** để thêm toàn bộ dữ liệu dịch vụ.
+
+<Frame caption="Nhập Excel dịch vụ hàng loạt">
+  <img
+    src=""
+    alt="Giao diện nhập Excel dịch vụ"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Danh sách dịch vụ**
+
+Trong danh sách dịch vụ, người dùng có thể xem nhanh các thông tin sau:
+
+- **Tên dịch vụ**  
+- **Cửa hàng**  
+- **Danh mục**  
+- **Giá bán**  
+- **Thời lượng**  
+- **Trạng thái hoạt động**
+
+Sử dụng **nút công tắc** để bật/tắt trạng thái hoạt động của từng dịch vụ.
+
+<Frame caption="Danh sách dịch vụ">
+  <img
+    src=""
+    alt="Giao diện danh sách dịch vụ"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Xem chi tiết dịch vụ**
+
+Truy cập **Quản lý dịch vụ → Dịch vụ**  
+→ Nhấn vào biểu tượng 👁 để xem chi tiết dịch vụ.  
+→ Giao diện chi tiết hiển thị toàn bộ thông tin đã cấu hình:  
+**Cửa hàng**, **Danh mục**, **Đơn vị tính**, **Giá**, **Thời lượng**, **Hình ảnh**,...
+
+<Frame caption="Chi tiết dịch vụ">
+  <img
+    src=""
+    alt="Màn hình chi tiết dịch vụ"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Chỉnh sửa dịch vụ**
+
+Truy cập **Quản lý dịch vụ → Dịch vụ**  
+→ Nhấn biểu tượng ✏ để mở form chỉnh sửa.  
+→ Cập nhật thông tin như:  
+**Tên dịch vụ**, **Mã hàng hóa**, **Slug**, **Giá bán**, **Thời lượng**, **Đơn vị tính**,...  
+→ Nhấn **Cập nhật** để lưu thay đổi.
+
+<Frame caption="Chỉnh sửa thông tin dịch vụ">
+  <img
+    src=""
+    alt="Form chỉnh sửa dịch vụ"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Xóa dịch vụ**
+
+Truy cập **Quản lý dịch vụ → Dịch vụ**  
+→ Nhấn biểu tượng 🗑 để xóa dịch vụ khỏi danh sách.  
+Hệ thống sẽ hiển thị thông báo xác nhận trước khi xóa để đảm bảo an toàn dữ liệu.
+
+<Frame caption="Xóa dịch vụ">
+  <img
+    src=""
+    alt="Xóa dịch vụ khỏi danh sách"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
